fine seconda sezione

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Discord</title>
 </head>
 <body>
-    <div class="container header">
+    <div class="container header row">
         <div class="section-container">
             <nav>
                 <div class="fl">
@@ -28,7 +28,7 @@
                 </div>
             </nav>
 
-            <div class="jumbotron">
+            <div class="jumbotron center">
                 <h1>Il tuo posto per parlare</h1>
                 <p>
                     Che tu faccia parte di un club scolastico, un gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.
@@ -40,6 +40,22 @@
                 <button class="button-big black">
                     Apri Discord nel tuo browser
                 </button>
+            </div>
+        </div>
+    </div>
+
+    <div class="container section-1">
+        <div class="section-container">
+            <div class="row center">
+                <div class="box-img s1 fl">
+                    <img src="./img/item1.svg" alt="">
+                </div>
+                <div class="section-text fr">
+                    <h2>Un luogo a invito con tutto lo spazio necesario per parlare</h2>
+                    <p>
+                        I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.
+                    </p>
+                </div>
             </div>
         </div>
     </div>
