completamento esercizio + tutto bonus

--- a/index.html
+++ b/index.html
@@ -44,18 +44,33 @@
         </div>
     </div>
 
-    <div class="container section-1">
+    <div class="container section-1 row">
         <div class="section-container">
-            <div class="row center">
-                <div class="box-img s1 fl">
-                    <img src="./img/item1.svg" alt="">
-                </div>
-                <div class="section-text fr">
-                    <h2>Un luogo a invito con tutto lo spazio necesario per parlare</h2>
-                    <p>
+             <div class="box-img s1 fl">
+                <img src="./img/item1.svg" alt="">
+            </div>
+            <div class="section-text fr">
+                <h2>Un luogo a invito con tutto lo spazio necesario per parlare</h2>
+                <p>
                         I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.
-                    </p>
-                </div>
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="container section-2 row">
+        <div class="wave-top">
+            <img src="./img/wave.svg" alt="">
+        </div>
+        <div class="section-container">
+            <div class="box-img s2 fr">
+                <img src="./img/item2.svg" alt="">
+            </div>
+            <div class="section-text fl">
+                <h2>Un luogo a invito con tutto lo spazio necesario per parlare</h2>
+                <p>
+                    I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.
+                </p>
             </div>
         </div>
     </div>
