--- a/index.html
+++ b/index.html
@@ -44,35 +44,176 @@
         </div>
     </div>
 
-    <div class="container section-1 row">
+    <div class="container">
         <div class="section-container">
-             <div class="box-img s1 fl">
-                <img src="./img/item1.svg" alt="">
-            </div>
-            <div class="section-text fr">
-                <h2>Un luogo a invito con tutto lo spazio necesario per parlare</h2>
-                <p>
+            <div class="row center">
+                <div class="box-img fl">
+                    <img src="./img/item1.svg" alt="">
+                </div>
+                <div class="section-text fr">
+                    <h2>Un luogo a invito con tutto lo spazio necesario per parlare</h2>
+                    <p>
                         I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.
-                </p>
+                    </p>
+                </div>
             </div>
         </div>
     </div>
 
-    <div class="container section-2 row">
-        <div class="wave-top">
-            <img src="./img/wave.svg" alt="">
+    <div class="wave">
+        <svg class="wave-1hkxOo" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 100" preserveAspectRatio="none"><path class="wavePath-haxJK1 animationPaused-2hZ4IO" d="M826.337463,25.5396311 C670.970254,58.655965 603.696181,68.7870267 447.802481,35.1443383 C293.342778,1.81111414 137.33377,1.81111414 0,1.81111414 L0,150 L1920,150 L1920,1.81111414 C1739.53523,-16.6853983 1679.86404,73.1607868 1389.7826,37.4859505 C1099.70117,1.81111414 981.704672,-7.57670281 826.337463,25.5396311 Z" fill= "#ccc"></path></svg>
+    </div>
+
+    <div class="container gray">
+        <div class="section-container">
+            <div class="row center">
+                <div class="box-img fr">
+                    <img src="./img/item2.svg" alt="">
+                </div>
+                <div class="section-text fl">
+                    <h2>Dove trovarsi é facile</h2>
+                    <p>
+                        Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi istantaneamente senza dover chiamare.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="big container">
+        <div class="wave rotate">
+            <svg class="wave-1hkxOo" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 100" preserveAspectRatio="none"><path class="wavePath-haxJK1 animationPaused-2hZ4IO" d="M826.337463,25.5396311 C670.970254,58.655965 603.696181,68.7870267 447.802481,35.1443383 C293.342778,1.81111414 137.33377,1.81111414 0,1.81111414 L0,150 L1920,150 L1920,1.81111414 C1739.53523,-16.6853983 1679.86404,73.1607868 1389.7826,37.4859505 C1099.70117,1.81111414 981.704672,-7.57670281 826.337463,25.5396311 Z" fill= "#ccc"></path></svg>
         </div>
         <div class="section-container">
-            <div class="box-img s2 fr">
-                <img src="./img/item2.svg" alt="">
-            </div>
-            <div class="section-text fl">
-                <h2>Un luogo a invito con tutto lo spazio necesario per parlare</h2>
-                <p>
-                    I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.
-                </p>
+            <div class="row center">
+                <div class="box-img fl">
+                    <img src="./img/item3.svg" alt="">
+                </div>
+                <div class="section-text fr">
+                    <h2>Da pochi a un fandom</h2>
+                    <p>
+                        Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso a i membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.
+                    </p>
+                </div>
             </div>
         </div>
+    </div>
+
+    <div class="wave">
+        <svg class="wave-1hkxOo" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 100" preserveAspectRatio="none"><path class="wavePath-haxJK1 animationPaused-2hZ4IO" d="M826.337463,25.5396311 C670.970254,58.655965 603.696181,68.7870267 447.802481,35.1443383 C293.342778,1.81111414 137.33377,1.81111414 0,1.81111414 L0,150 L1920,150 L1920,1.81111414 C1739.53523,-16.6853983 1679.86404,73.1607868 1389.7826,37.4859505 C1099.70117,1.81111414 981.704672,-7.57670281 826.337463,25.5396311 Z" fill= "#ccc"></path></svg>
+    </div>
+
+    <div class="big container gray">
+        <div class="section-container">
+            <div class="row center">
+                <div class="last section-text">
+                    <h2>Tecnologia affidabile per tenersi in contatto</h2>
+                    <p>
+                        Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di dsegno con la condividione schermo        
+                    </p>
+                </div>
+
+                <div class="last box-img">
+                    <img src="./img/item4-big.svg" alt="">
+                </div>
+                <div class="new-adventure">
+                    <h3>Pronto a iniziare la tua avventura?</h3>
+                </div>
+                <div class="button-center">
+                    <button class="button-big blue">
+                        &#8595; Scarica per Mac
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container footer">
+        <div class="section-container">
+                <div class="box-footer contact fl">
+                    <ul>
+                        <li>
+                            <h2>Il tuo posto per parlare</h2>
+                        </li>
+                        <li>
+                            <div class="flag fl">
+                                <img src="./img/ita.png" alt="italian flag">
+                                <span>Italiano &#8711;</span>
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="social">
+                                <!-- img with social icons -->
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="box-footer fl">
+                    <ul>
+                        <li>
+                            <h3>Prodotto</h3>
+                        </li>
+                        <li><a href="">Scarica</a></li>
+                        <li><a href="">Perché Discord</a></li>
+                        <li><a href="">Nitro</a></li>
+                        <li><a href="">Sicurezza</a></li>
+                        <li><a href="">Assistenza</a></li>
+                    </ul>
+                </div>
+                <div class="box-footer fl">
+                    <ul>
+                        <li>
+                            <h3>Compagnia</h3>
+                        </li>
+                        <li><a href="">Chi siamo</a></li>
+                        <li><a href="">Lavora con noi</a></li>
+                        <li><a href="">Marchio</a></li>
+                        <li><a href="">Redazione</a></li>
+                        <li><a href="">Negozio</a></li>
+                    </ul>
+                </div>
+                <div class="box-footer fl">
+                    <ul>
+                        <li>
+                            <h3>Risorse</h3>
+                        </li>
+                        <li><a href="">Scarica</a></li>
+                        <li><a href="">Perché Discord</a></li>
+                        <li><a href="">Nitro</a></li>
+                        <li><a href="">Sicurezza</a></li>
+                        <li><a href="">Assistenza</a></li>
+                        <li><a href="">Scarica</a></li>
+                        <li><a href="">Perché Discord</a></li>
+                        <li><a href="">Nitro</a></li>
+                        <li><a href="">Sicurezza</a></li>
+                        <li><a href="">Assistenza</a></li>
+                        <li><a href="">Assistenza</a></li>
+                    </ul>
+                </div>
+                <div class="box-footer fl">
+                    <ul>
+                        <li>
+                            <h3>Norme</h3>
+                        </li>
+                        <li><a href="">Scarica</a></li>
+                        <li><a href="">Perchè Discord</a></li>
+                        <li><a href="">Nitro</a></li>
+                        <li><a href="">Sicurezza</a></li>
+                        <li><a href="">Assistenza</a></li>
+                    </ul>
+                </div>
+                <hr>
+            <div class="section-container space">
+                <div class="fl">
+                    <img src="./img/logo.svg" alt="logo">
+                </div>
+                <div class="fr">
+                    <button class="button-small blue">
+                        Registrati
+                    </button>
+                </div>
+            </div>
     </div>
 </body>
 </html>
